--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    
+  }
+
+.mainColor {
+    background-image: linear-gradient(-90deg, #BF40BF, #5D3FD3);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.mainColor-2 {
+  background-image: linear-gradient(-90deg, #380036, #0CBABA);
+}
+
+.mainTextColor {
+    color: linear-gradient(-90deg, #BF40BF, #5D3FD3);
+}
+
+.shadow-button:hover{
+  box-shadow: 0 0 5px #2cf9fa, 0 0 25px #2cf9fa, 0 0 50px #2cf9fa,
+  0 0 200px #2cf9fa;
+}
+
+.circle-effect {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 400px;
+  width: 400px;
+  border-radius: 50%;
+  animation: changeColor 4s linear infinite;
+}
+
+@keyframes changeColor {
+  0% {
+    box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+    transform: translate(-50%,-50%) rotate(0deg);
+  }
+  50% {
+    box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #0ff, inset -20px 0 80px #f0f, inset 20px 0 300px #fff, inset -20px 0 300px #f0f, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+    transform: translate(-50%,-50%) rotate(1turn);
+  }
+  100% {
+    box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+    transform: translate(-50%,-50%) rotate(0deg);
+  }
 }
