--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,20 @@
   animation-duration: calc(120s / var(--i));
 }
 
+.animationUp{
+  animation: moveUp 4s linear infinite;
+  border-radius: 10px;
+}
+.animationDown{
+  animation: moveDown 4s linear infinite;
+  border-radius: 10px;
+}
+
+.banner-left,
+.banner-right{
+  transition: all 0.5s linear;
+}
+
 @keyframes animate1 {
   0% {
     left: -100%;
@@ -321,5 +335,47 @@
     color: #fff;
     text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff, 0 0 80px #0ff,
       0 0 160px #0ff;
+  }
+}
+
+@keyframes moveUp {
+  0% {
+    transform: translateY(20px);
+    box-shadow: inset 0 0 5px #fff, inset 10px 0 20px #f0f,
+    inset -5px 0 40px #0ff, inset 5px 0 40px #f0f, inset -5px 0 10px #0ff,
+    0 0 10px #fff, -5px 0 10px #f0f, 5px 0 10px #0ff;
+  }
+  50% {
+    transform: translateY(-20px);
+    box-shadow: inset 0 0 5px #fff, inset 10px 0 20px #0ff,
+    inset -5px 0 40px #f0f, inset 5px 0 40px #0ff, inset -5px 0 10px #f0f,
+    0 0 10px #fff, -5px 0 10px #0ff, 5px 0 10px #f0f;
+  }
+  100% {
+    transform: translateY(20px);
+    box-shadow: inset 0 0 5px #fff, inset 10px 0 20px #f0f,
+    inset -5px 0 40px #0ff, inset 5px 0 40px #f0f, inset -5px 0 10px #0ff,
+    0 0 10px #fff, -5px 0 10px #f0f, 5px 0 10px #0ff;
+  }
+}
+
+@keyframes moveDown {
+  0% {
+    transform: translateY(-20px);
+    box-shadow: inset 0 0 5px #fff, inset 10px 0 20px #0ff,
+    inset -5px 0 40px #f0f, inset 5px 0 40px #0ff, inset -5px 0 10px #f0f,
+    0 0 10px #fff, -5px 0 10px #0ff, 5px 0 10px #f0f;
+  }
+  50% {
+    transform: translateY(20px);
+    box-shadow: inset 0 0 5px #fff, inset 10px 0 20px #f0f,
+    inset -5px 0 40px #0ff, inset 5px 0 40px #f0f, inset -5px 0 10px #0ff,
+    0 0 10px #fff, -5px 0 10px #f0f, 5px 0 10px #0ff;
+  }
+  100% {
+    transform: translateY(-20px);
+    box-shadow: inset 0 0 5px #fff, inset 10px 0 20px #0ff,
+    inset -5px 0 40px #f0f, inset 5px 0 40px #0ff, inset -5px 0 10px #f0f,
+    0 0 10px #fff, -5px 0 10px #0ff, 5px 0 10px #f0f; 
   }
 }
